--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.65.1"
+    "react-native": "0.65.1",
+    "react-native-autocomplete-input": "^5.0.2",
+    "react-native-camera": "^4.1.1",
+    "react-native-permissions": "^3.0.5",
+    "react-native-qrcode-scanner": "^1.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
